--- a/PlanningCenterSchedule/ClientApp/app/components/home/home.component.html
+++ b/PlanningCenterSchedule/ClientApp/app/components/home/home.component.html
@@ -17,19 +17,21 @@
 <div class="panel panel-default">
     <div class="panel-body">
         <div>
-            <strong>Key:</strong>
-            <span class="label label-default" style="margin-left: 5px;">
-                Has Not Responded
-            </span>
-            <span class="label label-success" style="margin-left: 5px;">
-                Accepted
-            </span>
-            <span class="label label-danger" style="margin-left: 5px;">
-                Declined
-            </span>
-            <span class="label" style="color: #000; margin-left: 5px;">
-                <span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>
-                Need to Send Request
+            <span class="pull-right">
+                <strong>Key:</strong>
+                <span class="label label-default" style="margin-left: 5px;">
+                    Has Not Responded
+                </span>
+                <span class="label label-success" style="margin-left: 5px;">
+                    Accepted
+                </span>
+                <span class="label label-danger" style="margin-left: 5px;">
+                    Declined
+                </span>
+                <span class="label" style="color: #000; margin-left: 5px;">
+                    <span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>
+                    Need to Send Request
+                </span>
             </span>
         </div>
         <table class="table table-striped table-hover table-schedule" *ngIf="schedule != null">
